@@ -129,7 +129,8 @@ module ActiveMerchant #:nodoc:
           Response.new(result.success?, message_from_result(result),
             {
               :braintree_customer => (customer_hash(result.customer) if result.success?),
-              :customer_vault_id => (result.customer.id if result.success?)
+              :customer_vault_id => (result.customer.id if result.success?),
+              :credit_card_token => (result.customer.credit_cards[0].token if result.success?)
             },
             :authorization => (result.customer.id if result.success?)
           )
